--- a/.github/workflows/pipeline-cicd.yml
+++ b/.github/workflows/pipeline-cicd.yml
@@ -41,4 +41,4 @@ jobs:
       - name: build docker image
         run: docker build . --file Dockerfile --tag $DOCKER_USER/$REPO_NAME:$BUILD_ID
       - name: docker push to repo
-        run: docker push $DOCKER_USER/$REPO_NAME:$BUILD_ID
+        run: docker push $DOCKER_USER/$REPO_NAME
