--- a/.github/workflows/pipeline-cicd.yml
+++ b/.github/workflows/pipeline-cicd.yml
@@ -34,11 +34,12 @@ jobs:
   build-to-image:
     runs-on: ubuntu-latest
     needs: build
+    
     steps:
       - name: docker login
         run: |
           docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
       - name: build docker image
-        run: docker build . --file Dockerfile --tag $DOCKER_USER/$REPO_NAME:$BUILD_ID
+        run: docker build . --file Dockerfile --tag $DOCKER_USER/$REPO_NAME
       - name: docker push to repo
         run: docker push $DOCKER_USER/$REPO_NAME
