--- a/.github/workflows/pipeline-cicd.yml
+++ b/.github/workflows/pipeline-cicd.yml
@@ -38,8 +38,7 @@ jobs:
     steps:
       - name: docker login
         run: |
+
           docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
-      - name: build docker image
-        run: docker build . --file Dockerfile --tag $DOCKER_USER/$REPO_NAME
-      - name: docker push to repo
-        run: docker push $DOCKER_USER/$REPO_NAME
+          docker build . --file Dockerfile --tag $DOCKER_USER/$REPO_NAME:$BUILD_ID
+          docker push $DOCKER_USER/$REPO_NAME:$BUILD_ID
