--- a/.github/workflows/pipeline-cicd.yml
+++ b/.github/workflows/pipeline-cicd.yml
@@ -32,6 +32,7 @@ jobs:
       runs-on: ubuntu-latest
       needs: build
       steps:
+        - uses: actions/checkout@v2
         - name: docker login
           run: |
             docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
