--- a/.github/workflows/pipeline-cicd.yml
+++ b/.github/workflows/pipeline-cicd.yml
@@ -30,13 +30,13 @@ jobs:
    
   build-to-image:
       runs-on: ubuntu-latest
-      needs: build
+      #needs: build
       steps:
         - uses: actions/checkout@v2
         - name: docker login
           run: |
             docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
         - name: build docker image
-          run: docker build . --file Dockerfile --tag $DOCKER_USER/$REPO_NAME
+          run: docker build . --file Dockerfile --tag $DOCKER_USER/$REPO_NAME:$BUILD_NUMBER
         - name: docker push to repo
-          run: docker push $DOCKER_USER/$REPO_NAME
+          run: docker push $DOCKER_USER/$REPO_NAME:$BUILD_NUMBER
