--- a/.github/workflows/pipeline-cicd.yml
+++ b/.github/workflows/pipeline-cicd.yml
@@ -15,6 +15,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: 'Set build id'
+        id: build_id
+        # add a step output `steps.build_id.outputs.id` as the unique id
+        run: echo "::set-output name=id::$(date +%s)"
       - name: checkout-sourcecode
         uses: actions/checkout@v2
       - name: build-nodejs
@@ -29,14 +33,21 @@ jobs:
         run: npm test
    
   build-to-image:
-      runs-on: ubuntu-latest
-      #needs: build
+      needs: build
       steps:
-        - uses: actions/checkout@v2
-        - name: docker login
-          run: |
-            docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
-        - name: build docker image
-          run: docker build . --file Dockerfile --tag $DOCKER_USER/$REPO_NAME:$BUILD_NUMBER
-        - name: docker push to repo
-          run: docker push $DOCKER_USER/$REPO_NAME:$BUILD_NUMBER
+        - name: Checkout
+          uses: actions/checkout@v2
+        - name: Login to Docker Hub
+          uses: docker/login-action@v1
+          with:
+            username: ${{ secrets.DOCKER_USER }}
+            password: ${{ secrets.DOCKER_PASSWORD }}
+        - name: Set up Docker Buildx
+          uses: docker/setup-buildx-action@v1
+        - name: Build and push
+          uses: docker/build-push-action@v2
+          with:
+            context: .
+            file: ./Dockerfile
+            push: true
+            tags: ${{ secrets.DOCKER_USER }}/${{secrets.REPO_NAME}}latest
