--- a/.github/workflows/pipeline-cicd.yml
+++ b/.github/workflows/pipeline-cicd.yml
@@ -19,6 +19,13 @@ jobs:
         id: build_id
         # add a step output `steps.build_id.outputs.id` as the unique id
         run: echo "::set-output name=id::$(date +%s)"
+      - name: 'Save build id'
+        # store the build id to a folder that we can later cache.
+        run: |
+          mkdir -p .build-id 
+          echo $BUILD_ID > .build-id/id
+        env:
+          BUILD_ID: ${{ steps.build_id.outputs.id }}
       - name: checkout-sourcecode
         uses: actions/checkout@v2
       - name: build-nodejs
@@ -51,4 +58,4 @@ jobs:
             context: .
             file: ./Dockerfile
             push: true
-            tags: ${{ secrets.DOCKER_USER }}/${{secrets.REPO_NAME}}latest
+            tags: ${{ secrets.DOCKER_USER }}/${{secrets.REPO_NAME}}:$BUILD_ID
