--- a/.github/workflows/pipeline-cicd.yml
+++ b/.github/workflows/pipeline-cicd.yml
@@ -9,22 +9,12 @@ env:
   DOCKER_USER: ${{secrets.DOCKER_USER}}
   DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
   REPO_NAME: ${{secrets.REPO_NAME}}
-  BUILD_ID: ${{ steps.build_id.outputs.id }}
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: 'Set build id'
-        id: build_id
-        # add a step output `steps.build_id.outputs.id` as the unique id
-        run: echo "::set-output name=id::$(date +%s)"
-      - name: 'Save build id'
-        # store the build id to a folder that we can later cache.
-        run: |
-          mkdir -p .build-id 
-          echo $BUILD_ID > .build-id/id    
       - name: checkout-sourcecode
         uses: actions/checkout@v2
       - name: build-nodejs
@@ -57,4 +47,4 @@ jobs:
             context: .
             file: ./Dockerfile
             push: true
-            tags: ${{ secrets.DOCKER_USER }}/${{secrets.REPO_NAME}}:$BUILD_ID
+            tags: ${{ secrets.DOCKER_USER }}/${{secrets.REPO_NAME}}:${{github.run_number}}
